--- a/timeout-dialog.css
+++ b/timeout-dialog.css
@@ -21,6 +21,7 @@
     width: 21px;
     padding: 2px;
     height: 20px;
+    visibility: hidden;
 }
 .timeout-dialog .ui-dialog-buttonpane {
   margin-top: 15px;
@@ -48,3 +49,5 @@
     font-family: sans-serif;
     font-size: 15px;
 }
+
+
